--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format:fix": "prettier --write src/."
+    "format:fix": "prettier --write src/.",
+    "postinstall": "npx husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -29,8 +35,8 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.4.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
