--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "bootswatch": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
