--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:fix": "prettier . --write"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
