--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview",
     "prepare": "husky install",
     "format:fix": "prettier . --write",
-    "test": "jest"
+    "test": "jest --config ./jest.config.ts --passWithNoTests",
+    "test:coverage": "jest --coverage --config ./jest.config.ts",
+    "test:watch": "jest --watch --config ./jest.config.ts"
   },
   "dependencies": {
     "classnames": "^2.3.2",
@@ -20,6 +22,9 @@
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.7",
@@ -38,12 +43,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.0.2",
     "prettier": "3.0.3",
     "sass": "^1.69.5",
     "ts-jest": "^29.1.1",
+    "ts-jest-mock-import-meta": "^1.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
