--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,15 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "types": ["@testing-library/jest-dom"],
     "module": "ESNext",
+
     "skipLibCheck": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
@@ -21,6 +24,6 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true
   },
-  "include": ["src"],
+  "include": ["src", "jest.config.ts", "setup-jest.ts","vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
