--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run format:fix"
+      "pre-commit": "npm run lint && npm run format:fix",
+      "pre-push": "npm run test"
     }
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.5.1",
+    "axios-mock-adapter": "^1.22.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
@@ -26,8 +29,11 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
+    "@types/history": "^5.0.0",
+    "@types/jest": "^29.5.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/sinon": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
@@ -41,10 +47,16 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-localstorage-mock": "^2.4.26",
     "jsdom": "^22.1.0",
     "lint-staged": "^15.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vitest": "^0.34.6"
+  },
+  "jest": {
+    "resetMocks": false,
+    "setupFiles": ["jest-localstorage-mock"]
   }
 }
