fix: fix env file

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-REACT_APP_CTP_PROJECT_KEY=soap-shop
-REACT_APP_CTP_CLIENT_SECRET=D2-f8EsBnWlpZgopdolhXmfiDa795vOt
-REACT_APP_CTP_CLIENT_ID=LTszMlT5Ri7IS0_ZZIVDCMsD
-REACT_APP_CTP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
-REACT_APP_CTP_API_URL=https://api.us-central1.gcp.commercetools.com
-REACT_APP_CTP_SCOPES=soap-shop view_categories:soap-shop manage_my_shopping_lists:soap-shop manage_my_orders:soap-shop view_published_products:soap-shop manage_customers:soap-shop manage_my_quotes:soap-shop manage_my_business_units:soap-shop create_anonymous_token:soap-shop manage_my_quote_requests:soap-shop manage_my_profile:soap-shop
+VITE_APP_PROJECT_KEY=soap-shop
+VITE_APP_SECRET=D2-f8EsBnWlpZgopdolhXmfiDa795vOt
+VITE_APP_CLIENT_ID=LTszMlT5Ri7IS0_ZZIVDCMsD
+VITE_APP_AUTH_URL=https://auth.us-central1.gcp.commercetools.com
+VITE_APP_API_URL=https://api.us-central1.gcp.commercetools.com
+VITE_APP_SCOPES=soap-shop view_categories:soap-shop manage_my_shopping_lists:soap-shop manage_my_orders:soap-shop view_published_products:soap-shop manage_customers:soap-shop manage_my_quotes:soap-shop manage_my_business_units:soap-shop create_anonymous_token:soap-shop manage_my_quote_requests:soap-shop manage_my_profile:soap-shop
