--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint && npm run format:fix",
-      "pre-push": "npm run test"
+      "pre-push": "npm run test -- --watch=false"
     }
   },
   "dependencies": {
