feat: set test environment and add two tests for cards

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+    "types": ["vitest/globals"],
 
     /* Bundler mode */
     "moduleResolution": "Node",
